[gd_scene load_steps=16 format=1]

[ext_resource path="res://addons/SGLscript/SGLscriptInterpreter.gd" type="Script" id=1]
[ext_resource path="res://addons/SGLscript/icon.png" type="Texture" id=2]
[ext_resource path="res://sglscript-examples/3d-scene/message_window.gd" type="Script" id=3]
[ext_resource path="res://sglscript-examples/res/shadowy-font-bold.fnt" type="BitmapFont" id=4]
[ext_resource path="res://sglscript-examples/res/shadowy-font-italic.fnt" type="BitmapFont" id=5]
[ext_resource path="res://sglscript-examples/res/shadowy-font.fnt" type="BitmapFont" id=6]
[ext_resource path="res://sglscript-examples/3d-scene/3d_scene.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.0898438, 0.0477295, 0.0477295, 0.666145 )
light_color = Color( 0.817566, 0.890625, 0.890625, 1 )
dark_color = Color( 0.351563, 0.277405, 0.277405, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="Animation" id=2]

resource/name = "ctc_bounce"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ctc_graphic:rect/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1, 2 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 7, 8 ), Vector2( 12, 8 ), Vector2( 7, 8 ) ] }

[sub_resource type="Environment" id=3]

ambient_light/enabled = true
ambient_light/color = Color( 0.108948, 0.287029, 0.328125, 1 )
ambient_light/energy = 1.0
fxaa/enabled = true
background/mode = 2
background/color = Color( 0, 0, 0, 1 )
background/energy = 1.0
background/scale = 1.0
background/glow = 2.34667
background/canvas_max_layer = null
glow/enabled = false
glow/blur_passes = 1
glow/blur_scale = 1.872
glow/blur_strength = 0.4888
glow/blur_blend_mode = null
glow/bloom = 1.17333
glow/bloom_treshold = 0.5
dof_blur/enabled = false
dof_blur/blur_passes = 2
dof_blur/begin = 5.0
dof_blur/range = 10.0
hdr/enabled = false
hdr/tonemapper = 0.0
hdr/exposure = 0.75
hdr/white = 2.45999
hdr/glow_treshold = 0.95
hdr/glow_scale = 0.2
hdr/min_luminance = 0.01
hdr/max_luminance = 9.56873
hdr/exposure_adj_speed = 20.1625
fog/enabled = false
fog/begin = 20.0
fog/begin_color = Color( 0.46875, 0.192261, 0.337553, 1 )
fog/end_color = Color( 0.403922, 0.403922, 0.690196, 1 )
fog/attenuation = 0.450625
fog/bg = true
bcs/enabled = true
bcs/brightness = 1.25
bcs/contrast = 8.0
bcs/saturation = 0.01
srgb/enabled = false

[sub_resource type="Animation" id=4]

resource/name = "approach"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("camera:transform/rotation")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 0.25, 1 ), "update":0, "values":[ Vector3( 0, 0, 0 ), Vector3( -12.9737, 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("camera:transform/translation")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 0.25, 1 ), "update":0, "values":[ Vector3( 0, 0, 0 ), Vector3( 0, -0.597195, -2.8719 ) ] }

[sub_resource type="Animation" id=5]

resource/name = "back away"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("camera:transform/translation")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5, 0.8, 1.5, 1.8, 2.7, 3 ), "transitions":FloatArray( -4, 1, 1, 1, 1, 1, 1 ), "update":0, "values":[ Vector3( 0, -0.597195, -2.8719 ), Vector3( 0, 0.978099, -1.63942 ), Vector3( 0, 0.528894, -0.406935 ), Vector3( 0, 0.919257, 0.825547 ), Vector3( 0, 0.251481, 2.05803 ), Vector3( 0, 0.68817, 3.29051 ), Vector3( 0, 0.289376, 4.52299 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("camera:transform/rotation")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.5, 3 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector3( -12.9737, 0, 0 ), Vector3( -19.8954, 0, 0 ), Vector3( -12.9737, 0, 0 ) ] }

[sub_resource type="Animation" id=6]

resource/name = "cube attack"
length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("spinny cube:transform/translation")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4 ), "transitions":FloatArray( 4, 1, 1 ), "update":0, "values":[ Vector3( 0, -1.06444, -7.9248 ), Vector3( 0, 1.5114, -2.63049 ), Vector3( 0, 0.0399005, 2.66382 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("camera:transform/translation")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.4, 0.7 ), "transitions":FloatArray( 0.25, 1 ), "update":0, "values":[ Vector3( 0, 0.289376, 4.52299 ), Vector3( 0, -0.816668, 4.94038 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("camera:transform/rotation")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.4, 0.7 ), "transitions":FloatArray( 0.25, 1 ), "update":0, "values":[ Vector3( -12.9737, 0, 0 ), Vector3( 27.6136, 0, 0 ) ] }

[sub_resource type="Animation" id=7]

length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("camera:transform/translation")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1, 1.5, 2.5, 3, 4 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1 ), "update":0, "values":[ Vector3( 0, -0.597195, -2.8719 ), Vector3( 0, -0.597195, -2.8719 ), Vector3( 0, -0.597195, -2.8719 ), Vector3( 0, -0.597195, -2.8719 ), Vector3( 0, -0.597195, -2.8719 ), Vector3( 0, -0.597195, -2.8719 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("camera:transform/rotation")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1, 1.5, 2.5, 3, 4 ), "transitions":FloatArray( -4, 1, -4, 1, -4, 1 ), "update":0, "values":[ Vector3( -12.9737, 0, 0 ), Vector3( 19.8243, -66.0454, 26.9918 ), Vector3( 19.8243, -66.0454, 26.9918 ), Vector3( 10.1987, 72.2997, -17.0657 ), Vector3( 10.1987, 72.2997, -17.0657 ), Vector3( -12.9737, 0, 0 ) ] }

[sub_resource type="Animation" id=8]

length = 10.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("spinny cube:transform/rotation")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 10 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ] }

[node name="root" type="Node"]

[node name="interpreter" type="Node" parent="."]

script/script = ExtResource( 1 )
__meta__ = { "_editor_icon":ExtResource( 2 ) }
filename = "res://sglscript-examples/3d-scene/main_script.sglscript"
auto_start = true

[node name="mwin" type="Panel" parent="interpreter"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = 455.0
margin/right = 1028.0
margin/bottom = 605.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 3 )

[node name="name_container" type="PanelContainer" parent="interpreter/mwin"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = -12.0
margin/right = 221.0
margin/bottom = 30.0

[node name="name_text" type="Label" parent="interpreter/mwin/name_container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 11.0
margin/right = 204.0
margin/bottom = 31.0
custom_fonts/font = ExtResource( 4 )
text = "Bob"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="dialogue_text" type="RichTextLabel" parent="interpreter/mwin"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 23.0
margin/top = 39.0
margin/right = 1002.0
margin/bottom = 130.0
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 6 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1

[node name="ctc" type="Control" parent="interpreter/mwin"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 988.0
margin/top = 103.0
margin/right = 1021.0
margin/bottom = 137.0

[node name="ctc_graphic" type="Label" parent="interpreter/mwin/ctc"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 8.0
margin/right = 28.0
margin/bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = ">"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ctc_anim" type="AnimationPlayer" parent="interpreter/mwin/ctc"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/ctc_bounce = SubResource( 2 )
next/ctc_bounce = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "ctc_bounce"

[node name="Button" type="Button" parent="interpreter/mwin"]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 18.0
margin/right = 1020.0
margin/bottom = 141.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="3d_scene" type="Spatial" parent="interpreter"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 7 )

[node name="camera" type="Camera" parent="interpreter/3d_scene"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = SubResource( 3 )
h_offset = 0.0
v_offset = 0.0

[node name="3d_anims" type="AnimationPlayer" parent="interpreter/3d_scene"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/approach = SubResource( 4 )
"anims/back away" = SubResource( 5 )
"anims/cube attack" = SubResource( 6 )
anims/turn = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="cube_rotate" type="AnimationPlayer" parent="interpreter/3d_scene"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/rotate = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "rotate"

[node name="light" type="OmniLight" parent="interpreter/3d_scene"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.87915, -5.48345 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 0.327805, 0.848481, 0.902344, 1 )
colors/specular = Color( 0.00723267, 0.00976467, 0.0234375, 1 )
shadow/shadow = false
shadow/darkening = 0.24
shadow/z_offset = 0.0
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 1.0
shadow/blur_passes = 0.0
projector = null
operator = 0
params/radius = 10.0
params/attenuation = 0.378929

[node name="ground" type="TestCube" parent="interpreter/3d_scene"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 34, 0, 0, 0, 0.2, 0, 0, 0, 34, 0, -2.72361, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="spinny cube" type="TestCube" parent="interpreter/3d_scene"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.809017, 0, 0.587785, 0, 1, 0, -0.587785, 0, 0.809017, 0, -1.06444, -7.9248 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="columns A" type="Spatial" parent="interpreter/3d_scene"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="TestCube 3" type="TestCube" parent="interpreter/3d_scene/columns A"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.5, 0, 0, 0, 5, 0, 0, 0, 0.5, -6.29144, 1.99314, -22.2264 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="TestCube4" type="TestCube" parent="interpreter/3d_scene/columns A"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.5, 0, 0, 0, 5, 0, 0, 0, 0.5, -6.29144, 1.99314, -16.5691 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="TestCube5" type="TestCube" parent="interpreter/3d_scene/columns A"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.5, 0, 0, 0, 5, 0, 0, 0, 0.5, -6.29144, 1.99314, -10.3963 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="TestCube6" type="TestCube" parent="interpreter/3d_scene/columns A"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.5, 0, 0, 0, 5, 0, 0, 0, 0.5, -6.29144, 1.99314, -4.34251 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="TestCube7" type="TestCube" parent="interpreter/3d_scene/columns A"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.5, 0, 0, 0, 5, 0, 0, 0, 0.5, -6.29144, 1.99314, 2.32444 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="TestCube8" type="TestCube" parent="interpreter/3d_scene/columns A"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.5, 0, 0, 0, 5, 0, 0, 0, 0.5, -6.29144, 1.99314, 10.0231 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="columns B" type="Spatial" parent="interpreter/3d_scene"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.8425, 0, 0 )

[node name="TestCube 3" type="TestCube" parent="interpreter/3d_scene/columns B"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.5, 0, 0, 0, 5, 0, 0, 0, 0.5, -6.29144, 1.99314, -22.2264 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="TestCube4" type="TestCube" parent="interpreter/3d_scene/columns B"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.5, 0, 0, 0, 5, 0, 0, 0, 0.5, -6.29144, 1.99314, -16.5691 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="TestCube5" type="TestCube" parent="interpreter/3d_scene/columns B"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.5, 0, 0, 0, 5, 0, 0, 0, 0.5, -6.29144, 1.99314, -10.3963 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="TestCube6" type="TestCube" parent="interpreter/3d_scene/columns B"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.5, 0, 0, 0, 5, 0, 0, 0, 0.5, -6.29144, 1.99314, -4.34251 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="TestCube7" type="TestCube" parent="interpreter/3d_scene/columns B"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.5, 0, 0, 0, 5, 0, 0, 0, 0.5, -6.29144, 1.99314, 2.32444 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="TestCube8" type="TestCube" parent="interpreter/3d_scene/columns B"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.5, 0, 0, 0, 5, 0, 0, 0, 0.5, -6.29144, 1.99314, 10.0231 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="ceiling" type="TestCube" parent="interpreter/3d_scene"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 7, 0, 0, 0, 0.25, 0, 0, 0, 20, 0, 6.88482, -6.49428 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[connection signal="pressed" from="interpreter/mwin/Button" to="interpreter/mwin" method="advance"]

[connection signal="finished" from="interpreter/3d_scene/3d_anims" to="interpreter/3d_scene" method="animation_finished"]


